Added a flag for release building.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 .vscode/
 .git/
 
-build*/res/
-build*/*.dll
+build*/*/res/
+build*/*/*.dll
 
-build*/elementary-int/
-build*/sandbox-int/
+build*/*/elementary-int/
+build*/*/sandbox-int/
 
 *.exe
 *.pdb
